--- a/client/src/App.css
+++ b/client/src/App.css
@@ -28,6 +28,13 @@
   color: #61dafb;
 }
 
+.paginado {
+  display: flex;
+  flex-direction: row;
+  text-decoration: none;
+  list-style-type: none;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
