searchBar finished, raceCreate finished, falta modularizar codigo de la home, mas validaciones en el raceCreate, limpiar codigo/depurificar y estilos

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -28,11 +28,12 @@
   color: #61dafb;
 }
 
-.paginado {
+.paginado, li {
   display: flex;
   flex-direction: row;
   text-decoration: none;
   list-style-type: none;
+  justify-content: center;
 }
 
 @keyframes App-logo-spin {
