--- a/client/src/components/NavBar/NavBar.module.css
+++ b/client/src/components/NavBar/NavBar.module.css
@@ -8,6 +8,16 @@
     justify-content: space-between;
 }
 
+.navBar::after {
+    content: "";
+    width: 100%;
+    position: absolute;
+    top: 8vh;
+    left: 0;
+    height: 1px;
+    background-color: #FAEDCD;
+}
+
 .links_container {
     display: flex;
     flex-direction: row;
@@ -54,7 +64,7 @@
 }
 
 .dog_icon:hover {
-    background-image: url('../../assets/dogIconTounge.jpg');
+    background-image: url('../../assets/dogIconToungeOut.png');
     background-repeat: none;
     background-size: cover;
     height: 3rem;
