--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -16,14 +16,12 @@
 
 .card_img {
     border-radius: 2rem;
-    width:300px;
-    height:210px;
     overflow: hidden;
 }
 
 .card_img img {
     width: 100%;
-    height: 225px;
+    height: 15rem;
 }
 
 .name {
@@ -31,7 +29,15 @@
 }
 
 .weight {
+    display: flex;
+    flex-direction: row;
     margin: 0;
+    align-items: center;
+    column-gap: 0.5rem;
+}
+
+.weight_icon {
+    font-size: 1.5rem;
 }
 
 .more_info {
