--- a/client/src/components/Home.module.css
+++ b/client/src/components/Home.module.css
@@ -105,4 +105,12 @@
 .current_page {
     margin: 0;
 }
+
+.cards img {
+    display: flex;
+    justify-self: center;
+    align-self: center;
+    justify-content: center;
+}
+
   
